Manual merge for #3462 + List.of